# CUDA-code

./: .gitignore  CMakeLists.txt
1.2lesson/: test.cu
